# AnomalyDetectionICT

./: pyproject.toml
notebooki/: 01_simulated_data.ipynb  02_real_data.ipynb  data_desc.ipynb  pendigits.ipynb
notebooks/: data_desc.ipynb  experiments.ipynb
