[tool.poetry]
name = "anomalydetectionict"
version = "0.1.0"
description = ""
authors = ["Andrii <andrii.sonsiadlo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pydantic = "^1.10.7"
pandas = "^2.0.1"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
ipympl = "^0.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
